--- a/Ordinary/tailwindbase/package.json
+++ b/Ordinary/tailwindbase/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "lite-server": "^2.6.1"
   }
 }
