--- a/Ordinary/mongouserauthexp/package.json
+++ b/Ordinary/mongouserauthexp/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
