--- a/Ordinary/nextjsbegin/next/my-application/package.json
+++ b/Ordinary/nextjsbegin/next/my-application/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "13.5.6",
     "path": "^0.12.7",
